# fgp-bot-discord

./: .gitignore  config.py  main.py  pyproject.toml  runfgpbot.bat
cogs/: api_cog.py  listener_cog.py  local_cog.py  no_prefix_cog.py
core/: __init__.py  api_client.py  database.py  enums.py  exceptions.py  file_manager.py  models.py
tests/: conftest.py  test_database.py
utils/: __init__.py  async_file_utils.py  compress_utils.py
