[project]
name = "fgp-bot-discord"
version = "0.1.0"
description = "Discord bot 'file manager' for personal uses."
authors = [
    { name = "ArtiArtem", email = "ArtiArtem8@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "discord-py>=2.5.2",
    "dotenv>=0.9.9",
    "pydantic>=2.11.4",
]

[project.optional-dependencies]
test = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0"]
[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = ["ruff>=0.11.9"]


[tool.ruff]
exclude = [".git", ".ruff_cache", ".venv", ".vscode", "site-packages", "tests"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL",
    # "A",
    # "ANN2",
    # "B",
    # "B",    # flake8-bugbear
    # "C",    # flake8-comprehensions
    # "C4",
    # "COM",
    # "D",    # pydocstyle
    # "E",    # Pycodestyle errors
    # "E4",
    # "E7",
    # "E9",
    # "EM",
    # "F",
    # "F",    # Pyflakes
    # "G",
    # "I",    # Isort
    # "LOG",
    # "Q",
    # "RUF",  # Ruff-specific rules
    # "S",    # flake8-bandit
    # "W",    # Pycodestyle warnings
]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
